k8s/identity-system/ldap/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpldapadmin
  namespace: auth-system
spec:
  selector:
    matchLabels:
      app: phpldapadmin
  replicas: 1
  template:
    metadata:
      labels:
        app: phpldapadmin
    spec:
      containers:
        - name: openldap
          image: osixia/phpldapadmin:latest
          ports:
          - containerPort: 80
            protocol: TCP
            name: http
          resources:
            requests:
              memory: "50Mi"
              cpu: "100m"
            limits:
              memory: "100Mi"
              cpu: "250m"
