k8s/identity-system/ldap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openldap
spec:
  ports:
  - name: ldap
    port: 389
    targetPort: ldap
  selector:
    app: openldap
